--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Dwnload\\WpContainerBuilder\\": "src/Container"
+      "Dwnload\\WpContainerBuilder\\": "src"
     }
   }
 }
