Update psr-4 autoload location with trailing slash.

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Dwnload\\WpContainerBuilder\\": "src"
+      "Dwnload\\WpContainerBuilder\\": "src/"
     }
   }
 }
